adiciona scripts ´lint:check`e ´lint:fix`

--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "pretier": "^0.0.1",
+    "prettier": "^3.5.0"
+  }
 }
