--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "scripts": {
     "dev": "next dev",
     "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test":"jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^29.7.0",
     "pretier": "^0.0.1",
     "prettier": "^3.5.0"
   }
